salesforce_app/force-app/main/default/objects/Mentorship_Request__c/Mentorship_Request__c.object-meta.xml
<CustomObject>
    <label>Mentorship Request</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentorship Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>