salesforce_app/force-app/main/default/objects/Mentorship_Request__c/fields/Intern__c.field-meta.xml
<CustomField>
    <fullName>Intern__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intern</label>
    <referenceTo>Intern__c</referenceTo>
    <relationshipLabel>Mentorship Requests</relationshipLabel>
    <relationshipName>Mentorship_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>