salesforce_app/force-app/main/default/objects/Mentorship_Request__c/fields/Mentor_Response__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Response__c</fullName>
    <label>Mentor Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>