salesforce_app/force-app/main/default/objects/Mentorship_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>Career Advice</fullName>
            </value>
            <value>
                <fullName>Project Help</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>