salesforce_app/force-app/main/default/objects/Mentorship_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intern__c</columns>
    <columns>Description__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Mentor_Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>